--- a/03-liens/dossier1/dossier3/fichier3.html
+++ b/03-liens/dossier1/dossier3/fichier3.html
@@ -4,7 +4,7 @@
 		</head>
 		<body>
 			<h1>fichier 3</h1>
-			<img src="../images/3.gif" />
+			<img src="../../images/3.gif" />
 			<br />
 			fichier
 			<br />
