--- a/04a-pratique-h1-h6/equipes-nba.html
+++ b/04a-pratique-h1-h6/equipes-nba.html
@@ -1,39 +1,37 @@
-Equipes
-EST
-ATLANTIC
-Boston Celtics
-Brooklyn Nets
-New York Knicks
-Philadelphia 76ers
-Toronto Raptors
-CENTRAL
-Chicago Bulls
-Cleveland Cavaliers
-Detroit Pistons
-Indiana Pacers
-Milwaukee Bucks
-SOUTHEAST
-Atlanta Hawks
-Charlotte Hornets
-Miami Heat
-Orlando Magic
-Washington Wizards
-OUEST
-NORTHWEST
-Denver Nuggets
-Minnesota Timberwolves
-Oklahoma City Thunder
-Portland Trail Blazers
-Utah Jazz
-PACIFIC
-Golden State Warriors
-LA Clippers
-Los Angeles Lakers
-Phoenix Suns
-Sacramento Kings
-SOUTHWEST
-Dallas Mavericks
-Houston Rockets
-Memphis Grizzlies
-New Orleans Pelicans
-San Antonio Spurs
+<h1> Equipes </h1>
+<h3> EST </h3>
+<h3> ATLANTIC </h3>
+<h5> Boston Celtics </h5>
+<h5> Brooklyn Nets </h5>
+<h5> New York Knicks </h5>
+<h5> Philadelphia 76ers </h5>
+<h5> Toronto Raptors </h5>
+<h3> CENTRAL </h3>
+<h5> Chicago Bulls </h5>
+<h5> Cleveland Cavaliers </h5>
+<h5> Detroit Pistons </h5>
+<h5> Indiana Pacers </h5>
+<h5> Milwaukee Bucks </h5>
+<h3> SOUTHEAST </h3>
+<h5> Atlanta Hawks </h3>
+<h5> Charlotte Hornets</h5>
+<h5> Washington Wizards </h5>
+<h3>OUEST </h3>
+<h3>NORTHWEST </h3>
+<h5> Denver Nuggets </h5>
+<h5> Minnesota Timberwolves </h5>
+<h5> Oklahoma City Thunder </h5> 
+<h5> Portland Trail Blazers </h5>
+<h5> Utah Jazz </h5>
+<h3> PACIFIC </h3>
+<h5> Golden State Warriors </h5>
+<h5> LA Clippers </h5>
+<h5>  Phoenix Suns </h5>
+<h5> Sacramento Kings </h5>
+<h3> SOUTHWEST </h5>
+<h5> Dallas Mavericks </h5>
+<h5> Houston Rockets </h5>
+<h5> Memphis Grizzlies </h5>
+<h5> New Orleans Pelicans </h5>
+<h5> San Antonio Spurs </h5>
+
