--- a/09-modele-de-boite/boite.html
+++ b/09-modele-de-boite/boite.html
@@ -5,12 +5,22 @@
 			</title>
 			<style>
 			
-				* {
-				  margin: 0;
-				  padding: 0;
+				div.contenuItem {
+				  margin: 3px;
+				  padding: 3px;
 				  box-sizing: border-box;
+				  border-color: gray;
+				  text-align: center;
+				   border-style: solid;
+				   border-radius: 6px;
+
 				}
-								
+				div::first-letter{
+					font-size: 200%;
+				}
+				h4{
+					backround-image: linear-gradient(grey,white);
+				}			
 			</style>
 			
 		</head>
