--- a/09-modele-de-boite/boite.html
+++ b/09-modele-de-boite/boite.html
@@ -19,7 +19,7 @@
 					font-size: 200%;
 				}
 				h4{
-					backround-image: linear-gradient(grey,white);
+					background-image: linear-gradient(grey,white);
 				}			
 			</style>
 			
