--- a/10-flexbox/flexbox-vide.html
+++ b/10-flexbox/flexbox-vide.html
@@ -5,12 +5,20 @@
 			</title>
 			<style>
 			
-				* {
-				  margin: 0;
-				  padding: 0;
+				div.contenuItem {
+				  margin: 3px;
+				  padding: 3px;
 				  box-sizing: border-box;
+				  border-color: gray;
+				  text-align: center;
+				  border-style: solid;
+				  border-radius: 8px;
+				  background-image: linear-gradient(green,white,white);
 				}
-			
+				h4{
+					font-size: 20px;
+				}
+
 				#contenu {
 					display: flex;
 					flex-flow: wrap;
